--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
+    "consign": "^0.1.6",
     "express": "^4.17.1"
   },
   "scripts": {
