conexao com banco quebrada

--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "license": "MIT",
   "dependencies": {
     "consign": "^0.1.6",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "mariadb": "^2.5.4"
   },
   "scripts": {
     "start": "nodemon index.js"
