--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "consign": "^0.1.6",
     "express": "^4.17.1",
     "mariadb": "^2.5.4",
-    "mysql": "^2.18.1"
+    "moment": "^2.29.1",
+    "mysql": "^2.18.1",
+    "mysql2": "^2.3.3"
   },
   "scripts": {
     "start": "nodemon index.js"
